--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,9 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     #open-in-view: false
     #generate-ddl: true
+    properties:
+      hibernate:
+        format_sql: true
   flyway:
     #    locations: filesystem:.\src\main\resources\db\migration
     enabled: true
